# fit_error_dampened_sine_wave

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  expression.txt  install.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  fix_jupyter.sh  install_poetry.sh  install_uv.sh  post_create.sh  post_create_commands.sh
.github/workflows/: ci.yml
demos/: compare_to_fit.ipynb  compare_to_num_exp.ipynb  compare_to_num_exp_cw.ipynb  demo_aliasing.ipynb  demo_fit.ipynb  derivation.ipynb  derivation_short_time_cw.ipynb  range_of_application.ipynb  test_plots.ipynb
demos/development/: derivation_short_time_cw.ipynb
demos/internal/: plot_curve_with_ci_demo.ipynb  test_plots.ipynb
scripts/: fix_notebooks.py
src/: anal_fit_err.py  example.py  math_functions.py  str_utils.py  sym_functions.py
src/fit_error_dampened_sine_wave/: anal_fit_err.py  math_functions.py  math_utils.py  plot_utils.py  str_utils.py  sym_functions.py
tests/: test_anal_fit_err.py  test_math_utils.py  test_plot_utils.py
