[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Example Python project setup"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "*", from = "src" }]  # Automatically include everything in src/


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3"
pytest = { version = "^8.4.1", extras = [
    "psutil",
] } # this optional package allows "addopts=-nauto" to work in the pytest.ini
pytest-xdist = "^3.8.0"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.0"
setuptools = "^80.9" # needed to solve https://github.com/python-poetry/poetry/issues/6328
tqdm = "^4.67.1"
black = { extras = [
    "jupyter",
], version = "24.2.0" } #  ci pipeline will grab version used in lock file
isort = "6.0.1" #  ci pipeline will grab version used in lock file
pytest-timeout = "^2.4.0"
nbqa = "^1.9.1"
ipykernel = "^6.30.0"
plotly = "^6.2.0"
nbformat= "^5.10.0"
scipy="^1.16.0"
lmfit="^1.3.4"
sympy="^1.14.0"
kaleido="^1.0.0"
matplotlib="^3.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
