[project]
name = "damped-sine-fit"
version = "0.1.0"
description = "Derive error in parameters when fitting a damped sine wave"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bryce M. Henson" }
]
dependencies = [
    "numpy>=2.3",
    "tqdm>=4.67.1",
    "scipy>=1.16.0",
    "lmfit>=1.3.4",
    "sympy>=1.14.0",
    "matplotlib>=3.10.5",
    "plotly>=6.2.0",
    "nbconvert>=7.17.0",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.0",
    "setuptools>=80.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.4.0",
    "black[jupyter]>=24.2.0",
    "isort>=6.0.1",
    "nbqa>=1.9.1",
    "ipykernel>=6.30.0",
    "kaleido>=1.0.0",
    "pytest-nb-as-test",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src/fit_error_dampened_sine_wave"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fit_error_dampened_sine_wave",]

[tool.isort]
profile = "black"